client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000
  type: NodePort
