server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 32222
  type: NodePort
