client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: client
spec:
  ingressClassName: nginx
  rules:
    - host: client.todo
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: client
                port:
                  number: 3000
